# rustywm

./: Cargo.toml
src/: data.rs  main.rs  state.rs
